<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
	<LinearLayout android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical" >
		
	    <TextView
	        android:id="@+id/titleText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/aboutTitle"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    <TextView
	        android:id="@+id/para1Text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:padding="30dp"
	        android:text="@string/aboutPara1"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <TextView
	        android:id="@+id/para2Text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:padding="30dp"
	        android:text="@string/aboutPara2"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <TextView
	        android:id="@+id/para3Text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:padding="30dp"
	        android:text="@string/aboutPara3"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <TextView
	        android:id="@+id/para4Text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:padding="30dp"
	        android:text="@string/aboutPara4"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <TextView
	        android:id="@+id/para5Text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:padding="30dp"
	        android:text="@string/aboutPara5"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <Button
	        android:id="@+id/aboutBackButton"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:onClick="goBack"
	        android:text="@string/back" />
	
	</LinearLayout>
</ScrollView>